Cleanups suggested by FindBugs:  Made public statics final.  Removed unused vars.  Removed redundant toString(), new String(String).  Made inner classes static (nested).  Removed uses of Serializable.  Added hashCode() wherever equals() is defined.
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/trunk@3459 4f837ed2-42f5-46e7-a7a5-fa17313484d4